Update index.html with proper link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Cybersecurity Portfolio</title>
+
+    <!-- Link to Main CSS File -->
   <link rel="stylesheet" href="style.css">
+  
+  <!-- Optional: Link to Additional CSS for Animations -->
+  <link rel="stylesheet" href="css/animations.css">
+  
 </head>
 <body>
 
@@ -72,7 +78,9 @@
     </form>
     <p>Or reach me directly at <a href="mailto:your.email@example.com">your.email@example.com</a></p>
   </section>
-
-  <script src="script.js"></script>
+  
+ <!-- Link to JavaScript Files (place at the end of the body for faster loading) -->
+  <script src="js/script.js"></script>
+  <script src="js/scroll-animations.js"></script>
 </body>
 </html>
