--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 <body>
 
-
+<div class="wrapper">
     <!-- Your Main Content -->
 
     <!-- Left-aligned Name Box -->
@@ -56,13 +56,15 @@
         </div>
     </div>
     <footer>
-        <p>Phone: 04226694581</p>
-        <p>Email: taraminishan905@gmail.com</p>
-        <div class="social-media">
-            <a href="https://www.linkedin.com/in/nishan-th101/">LinkedIn</a>
-            <a href="https://github.com/BilNishan">Github</a>
+        <div class="footer-content">
+            <p>Email: taraminishan905@gmail.com |</p>
+            <div class="social-media">
+                <a href="https://www.linkedin.com/in/nishan-th101/">LinkedIn</a>
+                <a href="https://github.com/BilNishan">Github</a>
+            </div>
         </div>
     </footer>
+</div>
 
 <script src="script.js"></script>
 </body>
