--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="footer-content">
             <p>Email: taraminishan905@gmail.com |</p>
             <div class="social-media">
-                <a href="https://www.linkedin.com/in/nishan-th101/">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/nishan-th101/">LinkedIn |</a>
                 <a href="https://github.com/BilNishan">Github</a>
             </div>
         </div>
