--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
         <a href="contact.html" data-url="contact.html">Contact</a>
     </nav>
 
+    <!-- Hamburger Menu Icon for Mobile -->
+    <div class="hamburger-menu" onclick="toggleMenu()">
+        <div></div> <!-- to create on line that css will play with -->
+        <div></div>
+        <div></div>
+    </div>
+
+    <!-- Sidebar Menu for Mobile -->
+    <div class="mobile-sidebar">
+        <a href="resume.html">Resume</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact</a>
+    </div>
+
 
     <!-- Main Content Section -->
     <div class="main-wrapper">
@@ -65,6 +79,8 @@
         </div>
     </footer>
 </div>
+
+
 
 <script src="script.js"></script>
 </body>
