Update About me section

--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
                 <img src="Resources/Profile.jpg" alt="Profile Picture" class="profile-pic">
                 <div class="profile-content">
                     <div class="about-me">
-                        <h1 class="title">Hello</h1>
-                        <p class="description">A Bit About Me<br>
-
+                        <h1 class="title">About Me</h1>
+                        <p class="description">
                             Driven by a deep interest in cybersecurity, I’m expanding my skills through real-world experiences and personal projects—learning how to identify vulnerabilities, strengthen defenses, and adopt a proactive, solutions-oriented approach to risk management. My internship as an IT Support Engineer has deepened my expertise in areas such as Google Workspace, Azure Active Directory, and end-point security, all of which I now aim to apply in a security-focused role.
                         </p>
 
